# npd

./: Cargo.toml  README.md  build.rs
.github/workflows/: publish.yml  test.yml
src/: args.rs  lib.rs  main.rs  mpd.rs
